# OccSEC

./: .gitmodules
bounce_back/: main.yaml  run_bounce_back.sh  time_record
bounce_back/myCA/: private_key.pem
cert_mg/: Cargo.toml  ec_key0  ec_key1  ec_pub_key0  ec_pub_key1  eckey_string
cert_mg/src/: main.rs
cert_mg/src/stls/: test_client.rs
cert_mg/src/stls/comm/: aes_comm.rs  ca_manager.rs
cert_mg/src/stls/server/: cert_cont.rs  conn_handle.rs
demos/bounce_back/: build_bounce_back.sh  main
demos/easy_socket/: build_occlum_instance.sh  easy_socket.yaml  run_easy_socket.sh
demos/fashionmnist/: build_pytorch_occlum_instance.sh  pytorch.yaml  run_pytorch.sh
demos/open_write/: main.cpp  open_write
demos/quick_handshake/: build_quickhandshake.sh  main  main.cpp  main.yaml  run_quickhandshake.sh  time_record
demos/ra-tls-mbedtls/: client.manifest.template  time_record
easy_socket/: build_occlum_instance.sh  easy_socket.py  easy_socket.yaml
fashionmnist/: build_pytorch_occlum_instance.sh  data_downloader.py  data_record  key_generator.sh  mnist.py  myCA.key  myCA.pem  myCA.srl  run_pytorch.sh  test.crt  test.csr  test.key
mysql/: SHOW  key_generator.sh  my.cnf  mysql.yaml  run_mysql_server.sh
rust_test/: Cargo.toml  ec_key0  ec_pub_key0  rsa_key1
rust_test/src/: main.rs
rust_test/src/comm/: aes_comm.rs
sysbench/: data_record  kssp_oltp_test.sh  my.cnf  run_oltp_test.sh
tcpkali/: data_record  generate_key.sh  kssp_tcpkali_client.sh  kssp_tcpkali_server.sh  run_tcpkali_client.sh  run_tcpkali_server.sh  stream_test_client.sh  tcpkali.yaml
(+134 files in other folders)
